--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,17 +1,17 @@
-$bgColor: #24292e;
-$text: #fff;
-
-@font-face {
-  font-family: 'Comic';
-  src: url('../fonts/comic.ttf') format('truetype');
-  font-weight: normal;
-  font-style: italic;
-}
-
-body {
-  padding: 1rem;
-  margin: 0;
-  font-family: Comic, sans-serif;
-  background-color: $bgColor;
-  color: $text;
-}
+@import 'normalize';
+@import 'fonts';
+@import 'vars';
+@import 'base';
+@import '../blocks/swiper/swiper.scss';
+@import '../blocks/modal-feedback/modal-feedback.scss';
+@import '../blocks/modal-feedback/modal-feedback-bg.scss';
+@import '../blocks/modal-call/modal-call.scss';
+@import '../blocks/modal-call/modal-call-bg.scss';
+@import '../blocks/header/header.scss';
+@import '../blocks/menu/menu.scss';
+@import '../blocks/menu/bg.scss';
+@import '../blocks/services/services.scss';
+@import '../blocks/brands/brands.scss';
+@import '../blocks/devices/devices.scss';
+@import '../blocks/prices/prices.scss';
+@import '../blocks/footer/footer.scss';
