--- a/src/blocks/modal-feedback/modal-feedback.scss
+++ b/src/blocks/modal-feedback/modal-feedback.scss
@@ -1,4 +1,5 @@
 .modal-feedback {
+  box-sizing: border-box;
   position: fixed;
   top: 0;
   right: 0;
@@ -31,11 +32,16 @@
   &__close {
     transform: translate(-95px, 36px);
     display: block;
-    background-image: url(/src/img/burger-close.svg);
+    background-image: url(../img/burger-close.svg);
     width: 40px;
     height: 40px;
     margin-right: 16px;
     background-color: transparent;
+
+    @media (max-width: 464px) {
+      transform: translate(0);
+      margin: 32px 0;
+    }
   }
 
   &__title {
